fix mytopics link in nav - change layout of mygroups to align cards and change container - add hover rule to li a

--- a/styles/sass/globals.scss
+++ b/styles/sass/globals.scss
@@ -45,6 +45,12 @@ ul {
 
 li {
   text-decoration: none;
+
+  a {
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 .container {
